135-synchronized锁升级之锁升级后和hashcode的关系